--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">美女精选图</string>
+    <string name="app_name">妹子瀑布流</string>
+    <string name="about_text">云想衣裳花想容，春风拂槛露华浓</string>
+    <string name="about_bottom_text">Copyright © 2017 Nilin.\nAll Rights Reserved.</string>
 </resources>
